CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_TESTING()

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE(GMock REQUIRED)
PKG_CHECK_MODULES(XDGBASEDIR libxdg-basedir REQUIRED)

INCLUDE_DIRECTORIES(
	${GTEST_INCLUDE_DIRS}
	${GMOCK_INCLUDE_DIRS}
	${XDGBASEDIR_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/../inc/
)

ADD_EXECUTABLE(unittest
	main.cpp
	signaltest.cpp
	stringoperationstest.cpp
	fileoperationstest.cpp
)

SET (CMAKE_CXX_FLAGS "-std=c++0x")

TARGET_LINK_LIBRARIES(unittest
	utils
	-lpthread
	${XDGBASEDIR_LIBRARIES}
	${GMOCK_LIBRARIES}
	${GTEST_BOTH_LIBRARIES}
)

ADD_TEST(UtilsTests unittest)
 
